--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset = "utf-8">
         <title>
-            Monkeys, Tulips, and Speculative Bubbles
+            User Usability and Accessibility Report
         </title>
         <link href="WebpageProjectStyleSheet.css" rel="stylesheet">
     </head>
