--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset = "utf-8">
         <title>
-            User Usability and Accessibility Report
+            HCI User Usability and Accessibility Report
         </title>
         <link href="WebpageProjectStyleSheet.css" rel="stylesheet">
     </head>
@@ -34,6 +34,7 @@
             <h1 id="heading">
                 The Hidden Complexities in Minimalist Design: A User Usability and Accessibility Report on Pinterest
             </h1>
+               <p> Author: Leon Nolte, Date: 29 April 2022</p>
             </div>
             <div>
                 <img id="Pinterest-logo" src="https://upload.wikimedia.org/wikipedia/commons/3/35/Pinterest_Logo.svg">
@@ -44,7 +45,7 @@
 
             <div>   
             <p class="paragraph">
-                Pinterest is a website designed for the purpose of exploring, saving, and sharing visual ideas, which come in many forms like art, recipes, or interior designs, just to name a few. 
+                <a target="-blank" href="https://www.pinterest.ie/" >Pinterest </a> is a website designed for the purpose of exploring, saving, and sharing visual ideas, which come in many forms like art, recipes, or interior designs, just to name a few. 
                 While a user may navigate and use the website to a limited extent without a profile, users with a profile get access to the full range of Pinterest’s functionality, like a personalized home feed, 
                 the option of saving images in an online library, and the option to upload and share images via Pinterest. The following report seeks to evaluate the strengths and weaknesses of Pinterest.com in terms of accessibility and usability. 
                 The evaluation will consist of 4 main parts: A usability assessment based on Jakob Nielsen’s ten user usability heuristics, a usability test with two testers, two prototypes for improving the website’s functionality, and an accessibility audit. 
