--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <h1 id="heading">
                 The Hidden Complexities in Minimalist Design: A User Usability and Accessibility Report on Pinterest
             </h1>
-               <p> Author: Leon Nolte, Date: 29 April 2022</p>
+               <p class="paragraph"> 
+                   Author: Leon Nolte, Date: 29 April 2022
+                </p>
             </div>
             <div>
                 <img id="Pinterest-logo" src="https://upload.wikimedia.org/wikipedia/commons/3/35/Pinterest_Logo.svg">
